# typing_aid

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
anydrive_typing_aid/: CMakeLists.txt  package.xml  setup.py
anydrive_typing_aid/config/: setup.yaml
anydrive_typing_aid/config/configurations/: default.yaml
anydrive_typing_aid/launch/: anydrive.launch
anydrive_typing_aid/scripts/: InitMove.py  basic_controller.py  basic_pos_control.py  controller.py  controller_v2.py  cte_mov.py  ctrl_common.py  friction.py  fsmstate.py  imped.py  imped_pos.py  imped_vel.py  impedance.py  init_mov.py  install_dependencies.sh  main.py  manual_commander.py  pid.py  plot.py  plot_data.py  pos_control.py  saver.py  test.py  torque_profile.py  trajectory_plotting.py  trigger.py  utils.py  val_reader.py
anydrive_typing_aid/scripts/old_scripts/: listener_node.py  manual_commander.py  plot.py  saver.py  val_reader.py
anydrive_typing_aid/src/anydrive_typing_aid/controllers/: base.py  base_controller.py  basic_pos_control.py  friction.py  friction_controller.py  imped_pos.py  impedance_controller.py  pid.py  position_controller.py  torque_controller.py
anydrive_typing_aid/src/anydrive_typing_aid/utils/: anydrive_interface.py  torque_profile.py  utilities.py
config/: parameters.yaml
franka_typing_aid/: CMakeLists.txt  README.md  package.xml
franka_typing_aid/include/franka_typing_aid/: LiftController.h  LiftControllerCartesianImpedance.h  LiftControllerJointPosition.h
franka_typing_aid/launch/: lifter.launch
franka_typing_aid/src/: LiftController.cpp  LiftControllerCartesianImpedance.cpp  LiftControllerJointPosition.cpp  dummy_main.cpp  enter_publisher.py  examples_common.cpp  main.cpp  measuring_forces.cpp  playground.cpp
launch/: lifter.launch
src/: LiftController.cpp  LiftController.h  LiftControllerCartesianImpedance.cpp  LiftControllerCartesianImpedance.h  LiftControllerJointPosition.cpp  LiftControllerJointPosition.h  dummy_main.cpp  examples_common.cpp  examples_common.h  lift_controller.cpp  lift_controller.h  lift_controller_joint_position.cpp  lift_controller_joint_position.h  main.cpp  measuring_forces.cpp  playground.cpp
